# ConnectX

./: CMakeLists.txt  README.md  game  main.cpp
app/: main.cpp
docs/: README.md  implementations.md  roadmap.md  structure.md
docs/implementations/: iocontroller.md
include/: Connect4Board.hpp  Connect4ControllerProxy.hpp  Connect4Game.hpp  Connect4IController.hpp  Connect4Types.hpp
include/ConnectX/: BoardProxy.hpp  ControllerProxy.hpp  DenseBoard.hpp  Factory.hpp  Game.hpp  IBoard.hpp  IController.hpp  INotify.hpp  IOController.hpp  IReferee.hpp  Macros.hpp  RefereeProxy.hpp  Types.hpp
src/: BoardProxy.cpp  CMakeLists.txt  Connect4Board.cpp  Connect4ControllerProxy.cpp  Connect4Game.cpp  ControllerProxy.cpp  DenseBoard.cpp  Game.cpp  IOController.cpp  RefereeProxy.cpp  Types.cpp
tests/: BoardProxyPassthroughTester.cpp  CMakeLists.txt  ControllerProxyPassthroughTester.cpp  RefereeProxyPassthroughTester.cpp  ZeroBoard.hpp  ZeroController.hpp
tests/factory/: CMakeLists.txt  FactoryAddArgumentTester.cpp  FactoryCreateArgumentTester.cpp  FactoryTester.cpp
tests/iocontroller/: BadCommandTester.cpp  BadGetCommandTester.cpp  CMakeLists.txt  GetAtPlainTester.cpp  GetAtTester.cpp  GetDimensionsTester.cpp  GetEndTester.cpp  GetHistoryTester.cpp  GetRangeTester.cpp  GetStartTester.cpp  GetTokenTester.cpp  HelpTester.cpp  PrintTester.cpp  QueryBoard.cpp  QueryBoard.hpp  QueryReferee.cpp  QueryReferee.hpp  ReturnPlainTester.cpp  ReturnTester.cpp
tests/proxies/: BoardPassthroughImpl.cpp  BoardPassthroughImpl.hpp  BoardProxyPassthroughInTester.cpp  BoardProxyPassthroughOutTester.cpp  CMakeLists.txt  ControllerPassthroughImpl.cpp  ControllerPassthroughImpl.hpp  ControllerProxyPassthroughInTester.cpp  ControllerProxyPassthroughOutTester.cpp  RefereePassthroughImpl.cpp  RefereePassthroughImpl.hpp  RefereeProxyPassthroughInTester.cpp  RefereeProxyPassthroughOutTester.cpp  ZeroBoard.hpp  ZeroController.hpp  ZeroReferee.hpp
